@@ -34,6 +34,7 @@ Functions:
  * Added uptime(), which returns much of the information from @uptime.
    From a suggestion by Jules. [MG]
  * quota() now accepts 'me' as an argument. Suggested by Padraic. [MG]
+ * remove() is now ANSI-aware. [MG]
    
 Fixes:
  * Wildcard matches on ANSI'd strings sometimes failed. Reported by Duckwa
@@ -48,6 +49,10 @@ Fixes:
    by Padraic. [MG]
  * align() didn't correctly apply ANSI to empty columns. Reported by
    Padraic. [MG]
+ * Fix compile warning in player.c when sendmail is not enabled. Reported by
+   Padraic. [MG]
+ * Fix hardcode bug in ansi_strcmp, which affected the softcode splice()
+   function. [MG]
 
 & 1.8.4p5
 Version 1.8.4 patchlevel 5                                 Jun 19,  2011
